Kubernetes/service/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magabot-deploy
  labels:
    app: magabot-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: magabot-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: magabot-app
    spec:
      containers:
        - name: magabot-container
          image: thepinkpanther96/chatbot-app:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5001
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
          
          startupProbe:
            httpGet: { path: /, port: http }
            failureThreshold: 60
            periodSeconds: 2

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always
