Kubernetes/service/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  websvc
spec:
  selector:
    app: magabot-app
  type:  ClusterIP
  ports:
  - port:  8080
    targetPort: 5001
